style: exchanged travis with github workflows